--- a/css/queries.css
+++ b/css/queries.css
@@ -25,6 +25,10 @@
         row-gap: 6.4rem;
     }
 
+    .hero{
+        gap: 0;
+    }
+
     .heading-secondary {
         font-size: 3.6rem;
     }
@@ -41,12 +45,25 @@
         gap: 3.2rem;
     }
 
-    .hero {
-        gap: 4.8rem;
-    }
 
     .testimonials-container {
         padding: 9.6rem 3.2rem;
+    }
+}
+
+/* TABLET 1008/16=63 */
+@media (max-width: 63em) {
+
+    .hero h1 {
+        font-size: 4rem;
+    }
+
+    .hero p {
+        font-size: 1.6rem;
+    }
+
+    .hero_btn .btn {
+        font-size: 1.9rem;
     }
 }
 
@@ -57,19 +74,51 @@
         font-size: 50%;
     }
 
+    /* Hero section */
     .hero {
         grid-template-columns: 1fr;
-        padding: 0 8rem;
-        gap: 6.4rem;
+        grid-template-rows: 1fr 2fr;
+        padding: 0 0;
+        text-align: center;
+    }
+    .hero_content{
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .half_circle {
+        display: none;
+    }
+    .hero_img {
+        text-align: center;
+        grid-row: 1;
+        width: 100%;
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .hero_img img {
+        width: 30%;
+        filter: drop-shadow(10px 10px 15px rgba(0, 0, 0, 0.5));
+    }
+
+    .hero_content br{
+        display: block;
+    }
+    .hero h1 {
+        font-size: 3.5rem;
+    }
+
+    .hero p {
+        font-size: 1.6rem;
+    }
+
+    .hero_btn .btn {
+        font-size: 1.9rem;
     }
 
     .hero-text-box,
     .hero-image-box {
         text-align: center;
-    }
-
-    .hero-img {
-        width: 60%;
     }
 
     .hero-description {
@@ -121,6 +170,7 @@
     .header {
         justify-content: space-between;
     }
+
     .btn-mobile-nav {
         display: block;
         z-index: 9999;
@@ -200,6 +250,16 @@
         margin-bottom: 4.8rem;
     }
 
+    /* Hero section */
+
+    .hero{
+        gap: 0;
+    }
+
+    .hero_img img {
+        width: 35%;
+    }
+
     .pricing-plan {
         width: 100%;
     }
@@ -228,6 +288,13 @@
         row-gap: 4.8rem;
     }
 
+    .hero{
+        gap: 0;
+    }
+
+    .hero_img img {
+        width: 40%;
+    }
     .grid--2--cols,
     .grid--3--cols,
     .grid--4--cols,
@@ -240,18 +307,7 @@
     .btn:visited {
         padding: 2.4rem 1.6rem;
     }
-
-    .section-hero {
-        padding: 2.4rem 0 6.4rem 0;
-    }
-
-    .hero {
-        padding: 0 3.2rem;
-    }
-
-    .hero-img {
-        width: 65%;
-    }
+   
 
     .logos img {
         height: 1.2rem;
@@ -300,6 +356,32 @@
     }
 }
 
+
+/* Smaller TABLET 376/16=23.5 */
+@media (max-width: 23.5em) {
+    .hero_img img {
+        width: 48%;
+    }
+}
+
+/* Smaller TABLET 400/16=25 */
+@media (max-width: 25em) {
+    .hero h1{
+        font-size: 2.6rem;
+    }
+
+    .hero p{
+        font-size: 1.5rem;
+    }
+
+    .hero_img img {
+        width: 50%;
+    }
+
+    .hero_btn .btn{
+        margin: 0.5rem;
+    }
+}
 /* fixing safari flexbox gap */
 .no-flexbox-gap .main-nav-list li:not(:last-child) {
     margin-right: 4.8rem;
