--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ body{
     right: 0;
     transform: translatex(70%);
     width: 200%;
-    height: 100%;
+    height: 100vh;
     background-color: #fff;
     border-radius: 250px;
     background-image: url(/img/hero/sheet2.jpg);
